added for each fuction to update Local storage

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
   }
 }
-
